# chess_cpp

./: .gitignore  CMakeLists.txt  game.hpp  king.cpp  libs.hpp  main.cpp  pawn.cpp  piece.cpp  piece.hpp  position.cpp  renderer.hpp  rook.cpp  test-chess.cpp
chess/: chess.sln  chess.vcxproj  chess.vcxproj.filters
chess_test/: chess_test.vcxproj  chess_test.vcxproj.filters
src/: CMakeLists.txt  bishop.cpp  bishop.hpp  board.hpp  catch.hpp  constants.hpp  enums.hpp  game.cpp  game.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  libs.hpp  main.cpp  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  position.cpp  position.hpp  queen.cpp  queen.hpp  renderer.cpp  rook.cpp  rook.hpp  test-chess.cpp  texture.cpp  texture.hpp
